// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`advisory_lock.sql > line 9 1`] = `
[
  "SELECT
	pg_advisory_xact_lock(1), pg_advisory_xact_lock_shared(2),
	pg_advisory_xact_lock(1, 1), pg_advisory_xact_lock_shared(2, 2)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 30,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_xact_lock",
                          },
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 34,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 63,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_xact_lock_shared",
                          },
                        },
                      ],
                      "location": 34,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 68,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 90,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 93,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_xact_lock",
                          },
                        },
                      ],
                      "location": 68,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 97,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 126,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 129,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_xact_lock_shared",
                          },
                        },
                      ],
                      "location": 97,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`advisory_lock.sql > line 19 1`] = `
[
  "SELECT pg_advisory_unlock_all()",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_unlock_all",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`advisory_lock.sql > line 25 1`] = `
[
  "SELECT
	pg_advisory_unlock(1), pg_advisory_unlock_shared(2),
	pg_advisory_unlock(1, 1), pg_advisory_unlock_shared(2, 2)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 27,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_unlock",
                          },
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 31,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 57,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_unlock_shared",
                          },
                        },
                      ],
                      "location": 31,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 62,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 81,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 84,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_unlock",
                          },
                        },
                      ],
                      "location": 62,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 88,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 114,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 117,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_unlock_shared",
                          },
                        },
                      ],
                      "location": 88,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`advisory_lock.sql > line 31 1`] = `
[
  "COMMIT",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_COMMIT",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`advisory_lock.sql > line 47 1`] = `
[
  "SELECT
	pg_advisory_lock(1), pg_advisory_lock_shared(2),
	pg_advisory_lock(1, 1), pg_advisory_lock_shared(2, 2)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 8,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 25,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_lock",
                          },
                        },
                      ],
                      "location": 8,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 29,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 53,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_lock_shared",
                          },
                        },
                      ],
                      "location": 29,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 58,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 75,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 78,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_lock",
                          },
                        },
                      ],
                      "location": 58,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 82,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 106,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 109,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_advisory_lock_shared",
                          },
                        },
                      ],
                      "location": 82,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`advisory_lock.sql > line 51 1`] = `
[
  "ROLLBACK",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
